--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Breeze App</title>
         <link rel="stylesheet" href="styles.css">
-        <script src="index.js"></script>
+        
     </head>
     <body>
         <main>
             <h1>Breeze App</h1>
 
             <div id="search-container">
-                <input type="text" id="locationInput" placeholder="Enter a location" />
-                <input type="submit" value="Submit" />
+                <input type="text" id="locationInput" placeholder="Enter a location"  />
+                <input type="submit" value="Submit" id="submit"/>
+            </div>
+
+            <div class="result-container">
+                <p class="location-result">City: Minneapolis</p>
+                <p class="location-degrees">Degrees: 45 F</p>
             </div>
         </main>
+
+        <script src="index.js"></script>
     </body>
 </html>
 
