Integrate API and update styling

--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
     </head>
     <body>
         <main>
-            <h1>Breeze App</h1>
+            <h1>Welcome to Breeze App</h1>
 
             <div id="search-container">
                 <input type="text" id="locationInput" placeholder="Enter city or ZIP code" />
                 <input type="submit" value="Search" id="search" />
             </div>
-
-            <div id="result-container">
+            <div id="card" style="display: none;">
                 <div class="icon-container">
-                    <span class="weather-icon"></span>
+                    <!-- <span class="weather-icon"></span> -->
                 </div>
-                <div class="content-container">
-                    <p class="location-result">Minneapolis</p>
-                    <p class="location-degrees">Degrees: 45&deg;</p>
-                </div>
+                <div class="content-container"></div>
             </div>
         </main>
 
