--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Breeze App</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="manifest" href="manifest.json">
+        <!-- <link rel="manifest" href="manifest.json"> -->
     </head>
     <body>
         <main>
             <nav>
                 <button class="toggleDeg" style="display: block;">°C °F</button>
+                <button id="geoBtn">Get your location</button>
+            </nav>
+            <section>
+                <h1>Data-Driven Forecasts You Can Depend On</h1>
                 <div id="search-container">
                     <input type="text" id="locationInput" placeholder="Enter city or ZIP code" />
                     <input type="submit" value="Search" id="search" />
                 </div>
-            </nav>
-            <button id="getUserLocation">Get your location</button>
-            <section>
-                <h1>Data-Driven Forecasts You Can Depend On</h1>
             
                 <ul id="results-container" style="display: none;"></ul>
                 <div id="msg"></div>
@@ -36,13 +36,13 @@
 
         <script src="index.js"></script>     
 
-        <script>
+        <!-- <script>
             if ('serviceWorker' in navigator) {
                 navigator.serviceWorker.register('./service-worker.js')
                 .then(() => console.log('✅ Service Worker registered'))
                 .catch(err => console.error('SW registration failed:', err));
             }
-        </script>
+        </script> -->
     </body>
 </html>
 
