Update geoBtn text content

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <body>
         <main>
             <nav>
-                <button class="toggleDeg" style="display: block;">°C °F</button>
-                <button id="geoBtn">Get your location</button>
+                <button class="toggleDeg" style="display: block;">
+                    <span>°C</span><span>°F</span>
+                </button>
+                <button id="geoBtn">Use location</button>
             </nav>
             <section>
                 <h1>Data-Driven Forecasts You Can Depend On</h1>
